# gplus

./: .gitignore  ALGORITHM_VALIDATION.md  ALGORITHM_VALIDATION_REPORT.md  CMakeLists.txt  MODULARIZATION_PLAN.md  MODULARIZATION_STATUS.md  README.md  compare_implementations.py  compare_with_zhang_benchmark.py  comparison_final.md  comparison_non_sequential.md  comparison_sequential.md  download_test_pdbs.py  run_benchmark.sh  run_tests.sh
apps/: gplus.cpp
benchmark/results/: benchmark_report.md
comparison_results/: summary.md
include/algorithm/: alignment.h  kabsch.h
include/config/: config.h  gplus_config.h
include/core/: atom.h  molecule.h  residue.h  sse.h
include/math/: mat4.h  rotation.h  vec3.h  vec4.h
include/utils/: file.h  logger.h  pdb_parser.h  pymol_generator.h  random.h
original_code/: README.md  gplus.cpp  gplus.cpp.bak  instrument.sh
src/algorithm/: alignment.cpp  kabsch.cpp
src/config/: config.cpp  gplus_config.cpp
src/core/: atom.cpp  molecule.cpp  residue.cpp  sse.cpp
src/math/: mat4.cpp  rotation.cpp  vec3.cpp  vec4.cpp
src/utils/: file.cpp  logger.cpp  pdb_parser.cpp  pymol_generator.cpp  random.cpp
tests/: benchmarks.cpp  comparison_tests.cpp  edge_cases.cpp  file_utils.h  integration_tests.cpp  tm_align_benchmark.cpp
tests/algorithm/: alignment_test.cpp  debug_alignment.cpp  kabsch_test.cpp
tests/core/: atom_test.cpp  residue_test.cpp
tests/data/benchmark/: README.md  analyze_results.py  run_benchmark.sh
tests/data/results/: benchmark_summary.md
tests/math/: mat4_test.cpp  vec3_test.cpp
tests/utils/: pdb_parser_test.cpp
